clean war/utgb for utgb clean, and create war/utgb for compile

--- a/utgb-shell/src/main/resources/org/utgenome/shell/template/java/scaffold/pom.xml.template
+++ b/utgb-shell/src/main/resources/org/utgenome/shell/template/java/scaffold/pom.xml.template
@@ -175,7 +175,7 @@
                   <type>jar</type>
                 </artifactItem>
               </artifactItems>
-              <outputDirectory>\${basedir}/war/utgb/theme</outputDirectory>
+              <outputDirectory>\${basedir}/src/main/webapp/theme</outputDirectory>
             </configuration>
           </execution>
     	  
