Fixes template for new RpcService interface

--- a/utgb-shell/src/main/resources/org/utgenome/shell/template/java/gwtscaffold/gwt/client/RPCService.java.template
+++ b/utgb-shell/src/main/resources/org/utgenome/shell/template/java/gwtscaffold/gwt/client/RPCService.java.template
@@ -8,7 +8,8 @@
 //--------------------------------------
 package $clientPackageName$;
 
-import com.google.gwt.user.client.rpc.RemoteService;
+
+import com.google.gwt.rpc.client.RpcService;
 import com.google.gwt.user.client.rpc.RemoteServiceRelativePath;
 
 /**
@@ -23,7 +24,7 @@ import com.google.gwt.user.client.rpc.RemoteServiceRelativePath;
  * 
  */
 @RemoteServiceRelativePath("rpc")
-public interface RPCService extends RemoteService {
+public interface RPCService extends RpcService {
 
 	// add your own RPC procedure
 	public String helloWorld(String name);
