--- a/utgb-shell/src/main/resources/org/utgenome/shell/template/java/gwtscaffold/gwt/client/RPCServiceAsync.java.template
+++ b/utgb-shell/src/main/resources/org/utgenome/shell/template/java/gwtscaffold/gwt/client/RPCServiceAsync.java.template
@@ -9,13 +9,13 @@
 package $clientPackageName$;
 
 import com.google.gwt.user.client.rpc.AsyncCallback;
-import com.google.gwt.user.client.rpc.RemoteService;
+import com.google.gwt.rpc.client.RpcService;
 
 /**
  * Asynchronous version of the RPCService interface.
  * To implement GWT RPC procecdure, see http://code.google.com/intl/en/webtoolkit/doc/1.6/DevGuideServerCommunication.html 
  */
-public interface RPCServiceAsync extends RemoteService {
+public interface RPCServiceAsync extends RpcService {
 	// add asynchronous version of the RPC procedure
 	public void helloWorld(String name, AsyncCallback<String> callback);
 }
