--- a/utgb-shell/src/main/resources/org/utgenome/shell/template/java/scaffold/pom.xml.template
+++ b/utgb-shell/src/main/resources/org/utgenome/shell/template/java/scaffold/pom.xml.template
@@ -19,6 +19,7 @@
     <gwt.version>2.0.3</gwt.version>
     <gwt.module>$moduleName$</gwt.module>
     <sqlite-jdbc.version>3.6.20.1</sqlite-jdbc.version>
+    <tomcat.version>6.0.26</tomcat.version>
     <gwt.jvmargs></gwt.jvmargs>
   </properties>
 
@@ -45,15 +46,9 @@
       <!-- this settings is requried to include sources codes to the artifact -->
       <resource>
         <directory>src/main/java</directory>
-        <excludes>
-          <exclude>**/.svn/**</exclude>
-        </excludes>
       </resource>
       <resource>
         <directory>src/main/resources</directory>
-        <excludes>
-          <exclude>**/.svn/**</exclude>
-        </excludes>
       </resource>
     </resources>
     <testResources>
@@ -83,7 +78,6 @@
         <artifactId>maven-eclipse-plugin</artifactId>
         <version>2.8</version>
         <configuration>
-          <buildOutputDirectory>war/utgb/WEB-INF/classes</buildOutputDirectory>
           <useProjectReferences>false</useProjectReferences>
         </configuration>
       </plugin>
@@ -175,6 +169,7 @@
                   <type>jar</type>
                 </artifactItem>
               </artifactItems>
+              <overWriteIfNewer>false</overWriteIfNewer>
               <outputDirectory>\${basedir}/src/main/webapp/theme</outputDirectory>
             </configuration>
           </execution>
@@ -278,7 +273,7 @@
     <dependency>
       <groupId>org.apache.tomcat</groupId>
       <artifactId>servlet-api</artifactId>
-      <version>6.0.18</version>
+      <version>\${tomcat.version}</version>
       <scope>provided</scope>
     </dependency>
 
