--- a/utgb-shell/src/main/resources/org/utgenome/shell/template/java/scaffold/pom.xml.template
+++ b/utgb-shell/src/main/resources/org/utgenome/shell/template/java/scaffold/pom.xml.template
@@ -216,7 +216,7 @@
       <plugin>
         <groupId>org.codehaus.mojo</groupId>
         <artifactId>tomcat-maven-plugin</artifactId>
-        <version>1.0-alpha-1</version>
+        <version>1.0</version>
         <configuration>
           <server>tomcat</server>
           <url>http://localhost:8080/manager</url>
