removed GenomeBrowser class, and now all trackes uses getBrowserService() method to invoke RPC calls

--- a/utgb-shell/src/main/resources/org/utgenome/shell/template/java/scaffold/src/main/webapp/404.jsp.template
+++ b/utgb-shell/src/main/resources/org/utgenome/shell/template/java/scaffold/src/main/webapp/404.jsp.template
@@ -1,7 +1,7 @@
 <html>
 <head>
-
-<title>UTGB: 404 File Not Found</title></head>
+<link rel="StyleSheet" href="theme/style/utgb.css" type="text/css">
+<title>404 File Not Found - UTGB</title></head>
 </head>
 <body>
 <h1>File Not Found</h1> 
