--- a/utgb-shell/src/main/resources/org/utgenome/shell/template/java/scaffold/src/main/webapp/index.jsp.template
+++ b/utgb-shell/src/main/resources/org/utgenome/shell/template/java/scaffold/src/main/webapp/index.jsp.template
@@ -1,6 +1,7 @@
 <html>
 <head>
-<title>$projectName$</title>
+<link rel="StyleSheet" href="theme/style/utgb.css" type="text/css">
+<title>$projectName$ - UTGB</title>
 </head>
 <body>
 <p>Welcome to $projectName$</p>
