--- a/utgb-core/pom.xml
+++ b/utgb-core/pom.xml
@@ -24,9 +24,6 @@
     <resources>
       <resource>
         <directory>src/main/java</directory>
-        <excludes>
-          <exclude>**/.svn/**</exclude>
-        </excludes>
       </resource>
     </resources>
     <testResources>
@@ -37,6 +34,17 @@
 
 
     <plugins>
+    
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-resources-plugin</artifactId>
+        <version>2.4</version>
+        <configuration>
+          <encoding>UTF-8</encoding>
+          <escapeString>\</escapeString>
+        </configuration>
+      </plugin>
+    
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-surefire-report-plugin</artifactId>
