--- a/utgb-shell/pom.xml
+++ b/utgb-shell/pom.xml
@@ -58,6 +58,15 @@
             <configuration>
               <shadedArtifactAttached>true</shadedArtifactAttached>
               <shadedClassifierName>standalone</shadedClassifierName>
+              <artifactSet>
+				<excludes>
+    			  <exclude>com.google.gwt:gwt-dev</exclude>
+    			  <exclude>com.google.gwt:gwt-user</exclude>
+    			  <exclude>com.google.gwt.gears:*</exclude>
+        		  <exclude>com.allen_sauer.gwt:gwt-dnd</exclude>
+        		  <exclude>*:gwt-incubator</exclude>
+  				</excludes>
+			  </artifactSet>
             </configuration>
           </execution>
         </executions>
