--- a/utgb-core/pom.xml
+++ b/utgb-core/pom.xml
@@ -48,6 +48,7 @@
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-surefire-report-plugin</artifactId>
+        <version>2.5</version>
         <configuration>
           <argLine>${utgb.jvmargs}</argLine>
         </configuration>
@@ -87,6 +88,7 @@
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-dependency-plugin</artifactId>
+        <version>2.1</version>
         <executions>
           <!-- Download GWT Dev Library -->
           <execution>
@@ -132,6 +134,7 @@
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-war-plugin</artifactId>
+        <version>2.0</version>
         <configuration>
           <webappDirectory>target/utgb</webappDirectory>
           <webResources>
@@ -151,6 +154,7 @@
 
       <plugin>
         <artifactId>maven-release-plugin</artifactId>
+        <version>2.0-beta-9</version>
         <configuration>
           <!--  do not run site-deploy goal, included in the default settings  -->
           <goals>deploy</goals>
