properly configure the logging of utgb server

--- a/utgb-shell/src/main/java/org/utgenome/shell/tomcat/scaffold/conf/logging.properties
+++ b/utgb-shell/src/main/java/org/utgenome/shell/tomcat/scaffold/conf/logging.properties
@@ -1,29 +1,21 @@
-handlers = 1xerial.org.apache.juli.FileHandler, 2localhost.org.apache.juli.FileHandler, \
-           3manager.org.apache.juli.FileHandler, 4admin.org.apache.juli.FileHandler, \
+handlers = 1utgb.org.apache.juli.FileHandler, 2localhost.org.apache.juli.FileHandler, \
            java.util.logging.ConsoleHandler
 
-.handlers = 1xerial.org.apache.juli.FileHandler, java.util.logging.ConsoleHandler
+.handlers = 1utgb.org.apache.juli.FileHandler, java.util.logging.ConsoleHandler
 
 ############################################################
 # Handler specific properties.
 # Describes specific configuration info for Handlers.
 ############################################################
 
-1xerial.org.apache.juli.FileHandler.level = FINE
-1xerial.org.apache.juli.FileHandler.directory = target/tomcat/logs
-1xerial.org.apache.juli.FileHandler.prefix = xerial.
+1utgb.org.apache.juli.FileHandler.level = FINE
+1utgb.org.apache.juli.FileHandler.directory = ${catalina.base}/logs
+1utgb.org.apache.juli.FileHandler.prefix = utgb.
+1utgb.org.apache.juli.FileHandler.bufferSize = 16384
 
 2localhost.org.apache.juli.FileHandler.level = FINE
-2localhost.org.apache.juli.FileHandler.directory = target/tomcat/logs
+2localhost.org.apache.juli.FileHandler.directory = ${catalina.base}/logs
 2localhost.org.apache.juli.FileHandler.prefix = localhost.
-
-3manager.org.apache.juli.FileHandler.level = FINE
-3manager.org.apache.juli.FileHandler.directory = target/tomcat/logs
-3manager.org.apache.juli.FileHandler.prefix = manager.
-
-4admin.org.apache.juli.FileHandler.level = FINE
-4admin.org.apache.juli.FileHandler.directory = target/tomcat/logs
-4admin.org.apache.juli.FileHandler.prefix = admin.
 
 java.util.logging.ConsoleHandler.level = FINE
 java.util.logging.ConsoleHandler.formatter = java.util.logging.SimpleFormatter
@@ -34,21 +26,13 @@ java.util.logging.ConsoleHandler.formatter = java.util.logging.SimpleFormatter
 # Provides extra control for each logger.
 ############################################################
 
-org.apache.catalina.core.ContainerBase.[xerial].[localhost].level = INFO
-org.apache.catalina.core.ContainerBase.[xerial].[localhost].handlers = \
+org.apache.catalina.core.ContainerBase.[utgb].[localhost].level = INFO
+org.apache.catalina.core.ContainerBase.[utgb].[localhost].handlers = \
    2localhost.org.apache.juli.FileHandler
 
-org.apache.catalina.core.ContainerBase.[xerial].[localhost].[/manager].level = INFO
-org.apache.catalina.core.ContainerBase.[xerial].[localhost].[/manager].handlers = \
-   3manager.org.apache.juli.FileHandler
-
-org.apache.catalina.core.ContainerBase.[xerial].[localhost].[/admin].level = INFO
-org.apache.catalina.core.ContainerBase.[xerial].[localhost].[/admin].handlers = \
-   4admin.org.apache.juli.FileHandler
 
 # For example, set the com.xyz.foo logger to only log SEVERE
 # messages:
 #org.apache.catalina.startup.ContextConfig.level = FINE
 #org.apache.catalina.startup.HostConfig.level = FINE
 #org.apache.catalina.session.ManagerBase.level = FINE
-    
