apply pack and height config in silk

--- a/utgb-core/pom.xml
+++ b/utgb-core/pom.xml
@@ -199,9 +199,14 @@
     <dependency>
       <groupId>org.utgenome.thirdparty</groupId>
       <artifactId>sam</artifactId>
-      <version>1.16</version>
+      <version>1.25</version>
     </dependency>
 
+    <dependency>
+      <groupId>org.utgenome.thirdparty</groupId>
+      <artifactId>picard</artifactId>
+      <version>1.25</version>
+    </dependency>
 
     <dependency>
       <groupId>org.xerial</groupId>
