--- a/utgb-shell/src/main/resources/org/utgenome/shell/template/java/gwtscaffold/gwt/public/browser.html.template
+++ b/utgb-shell/src/main/resources/org/utgenome/shell/template/java/gwtscaffold/gwt/public/browser.html.template
@@ -8,10 +8,10 @@
 Please enable JavaScript by changing your browser options, then <a href="">try again</a>.
 </noscript>
 
-<body class="utgb">
+<div class="utgb">
  <script language="javascript" src="utgb.nocache.js"></script>
  <iframe id="__gwt_historyFrame" style="width:0;height:0;border:0"></iframe>
  <span id="loading">Loading... </span>
  <div id="utgb-main"></div>
-</body>
+</div>
 </html>
