--- a/utgb-core/pom.xml
+++ b/utgb-core/pom.xml
@@ -74,10 +74,12 @@
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-eclipse-plugin</artifactId>
+        <version>2.8</version>
         <configuration>
           <!-- 
           <buildOutputDirectory>war/WEB-INF/classes</buildOutputDirectory> 
            -->
+          <excludes><exclude>com.google.gwt:gwt-servlet</exclude></excludes>
           <useProjectReferences>false</useProjectReferences>
         </configuration>
       </plugin>
