--- a/pom.xml
+++ b/pom.xml
@@ -212,10 +212,7 @@
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-site-plugin</artifactId>
-	<version>2.1.1</version>
-	<configuration>
-	  <generateSitemap>true</generateSitemap>
-	</configuration>
+	<version>2.0-beta-7</version>
         <dependencies>
           <dependency>
             <groupId>org.xerial.maven</groupId>
