--- a/pom.xml
+++ b/pom.xml
@@ -190,7 +190,7 @@
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-resources-plugin</artifactId>
-	<version>2.4</version>
+		<version>2.4</version>
         <configuration>
           <encoding>UTF-8</encoding>
         </configuration>
@@ -207,11 +207,13 @@
       </plugin>
 
       <plugin>
-	<groupId>org.apache.maven.plugins</groupId>
+		<groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-eclipse-plugin</artifactId>
-	<version>2.8</version>
+		<version>2.8</version>
         <configuration>
           <useProjectReferences>false</useProjectReferences>
+          <downloadSources>true</downloadSources>
+          <downloadJavadocs>true</downloadJavadocs>
         </configuration>
       </plugin>
 
@@ -219,10 +221,10 @@
       <!-- tag directory -->
       <plugin>
         <artifactId>maven-release-plugin</artifactId>
-	<version>2.0-beta-9</version>
+		<version>2.0-beta-9</version>
         <configuration>
-	  <autoVersionSubmodules>true</autoVersionSubmodules>
-	  <preparationGoals>clean install</preparationGoals>
+		  <autoVersionSubmodules>true</autoVersionSubmodules>
+		  <preparationGoals>clean install</preparationGoals>
           <goals>deploy</goals>
           <connectionUrl>scm:hg:https://utgb.googlecode.com/hg/</connectionUrl>
         </configuration>
@@ -231,7 +233,7 @@
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-site-plugin</artifactId>
-	<version>2.0-beta-7</version>
+		<version>2.0-beta-7</version>
         <dependencies>
           <dependency>
             <groupId>org.xerial.maven</groupId>
@@ -295,7 +297,7 @@
 	  <artifactId>maven-surefire-report-plugin</artifactId>
 	  <version>2.5</version>
 	  <configuration>
-            <aggregate>true</aggregate>
+        <aggregate>true</aggregate>
 	  </configuration>
 	</plugin>
     </plugins>
