--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
   <groupId>org.utgenome</groupId>
   <artifactId>utgb-toolkit</artifactId>
   <name>UTGB Toolkit</name>
-  <version>1.4.11-SNAPSHOT</version>
+  <version>1.5.0-SNAPSHOT</version>
   <description>The University of Tokyo Genome Browser (UTGB) Toolkit</description>
   <packaging>pom</packaging>
  
@@ -250,8 +250,8 @@
   <dependencies>
     <dependency>
       <groupId>org.xerial</groupId>
-      <artifactId>xerial-core</artifactId>
-      <version>1.2.4</version>
+      <artifactId>xerial-lens</artifactId>
+      <version>2.0-SNAPSHOT</version>
     </dependency>
     <dependency>
       <groupId>junit</groupId>
