--- a/pom.xml
+++ b/pom.xml
@@ -251,7 +251,7 @@
     <dependency>
       <groupId>org.xerial</groupId>
       <artifactId>xerial-lens</artifactId>
-      <version>2.0-SNAPSHOT</version>
+      <version>2.0</version>
     </dependency>
     <dependency>
       <groupId>junit</groupId>
