--- a/utgb-core/pom.xml
+++ b/utgb-core/pom.xml
@@ -218,7 +218,7 @@
     <dependency>
       <groupId>org.xerial</groupId>
       <artifactId>xerial-storage</artifactId>
-      <version>2.0-SNAPSHOT</version>
+      <version>2.0</version>
     </dependency>
 
     <dependency>
