--- a/pom.xml
+++ b/pom.xml
@@ -254,6 +254,11 @@
       <version>2.0</version>
     </dependency>
     <dependency>
+      <groupId>org.xerial</groupId>
+      <artifactId>xerial-core</artifactId>
+      <version>2.0.1</version>
+    </dependency>
+    <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
       <version>4.8.1</version>
