--- a/utgb-shell/src/main/resources/org/utgenome/shell/template/java/scaffold/pom.xml.template
+++ b/utgb-shell/src/main/resources/org/utgenome/shell/template/java/scaffold/pom.xml.template
@@ -218,13 +218,16 @@
       <plugin>
         <groupId>org.codehaus.mojo</groupId>
         <artifactId>tomcat-maven-plugin</artifactId>
-        <version>1.0</version>
+        <version>1.1</version>
         <configuration>
           <server>tomcat</server>
           <url>http://localhost:8080/manager</url>
           <!-- specify your web application's context path. If the path value is "/myapp",
           	 your web application is deployed at http://localhost:8080/myapp  -->
           <path>/$projectName$</path>
+          <contextFile>${project.build.directory}/utgb/META-INF/context.xml</contextFile>
+          <mode>both</mode>
+          <ignorePackaging>true</ignorePackaging>
           <update>true</update>
         </configuration>
       </plugin>
