--- a/utgb-shell/pom.xml
+++ b/utgb-shell/pom.xml
@@ -46,7 +46,8 @@
         <artifactId>maven-dependency-plugin</artifactId>
         <version>2.0</version>
       </plugin>
-    
+
+    <!--    
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-shade-plugin</artifactId>
@@ -81,14 +82,15 @@
           </execution>
         </executions>
       </plugin>
+      -->
 
       <plugin>
         <artifactId>maven-assembly-plugin</artifactId>
         <version>2.2-beta-3</version>
         <configuration>
-          <finalName>utgb</finalName>
+          <finalName>utgb-toolkit-${project.version}</finalName>
           <descriptors>
-            <descriptor>src/assembly/distribution.xml</descriptor>
+            <descriptor>src/assembly/bin.xml</descriptor>
           </descriptors>
         </configuration>  
         <executions>
@@ -141,6 +143,7 @@
       <artifactId>svnkit</artifactId>
       <version>1.3.0.5847</version>
     </dependency>
+    
 
     <!-- Tomcat Libraries -->
     <dependency>
@@ -179,5 +182,19 @@
       <version>${sqlite-jdbc.version}</version>
     </dependency>
 
+    <dependency>
+    	<groupId>org.codehaus.plexus</groupId>
+    	<artifactId>plexus-classworlds</artifactId>
+    	<version>2.4</version>
+    	<type>jar</type>
+    	<scope>compile</scope>
+    </dependency>
+    <dependency>
+    	<groupId>org.apache.maven</groupId>
+    	<artifactId>maven-embedder</artifactId>
+    	<version>3.0.2</version>
+    	<type>jar</type>
+    	<scope>compile</scope>
+    </dependency>
   </dependencies>
 </project>
