--- a/utgb-core/pom.xml
+++ b/utgb-core/pom.xml
@@ -135,7 +135,7 @@
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-war-plugin</artifactId>
-        <version>2.0</version>
+        <version>2.1.1</version>
         <configuration>
           <webappDirectory>target/utgb</webappDirectory>
           <webResources>
@@ -276,5 +276,12 @@
     </dependency>
     -->
 
+    <dependency>
+    	<groupId>org.codehaus.plexus</groupId>
+    	<artifactId>plexus-classworlds</artifactId>
+    	<version>2.4</version>
+    	<type>jar</type>
+    	<scope>compile</scope>
+    </dependency>
   </dependencies>
 </project>
