resolve the reference to utgb-core project using the workspace scope in Eclipse. This change is nessesary to debug utgb-core

--- a/utgb-shell/src/main/java/org/utgenome/shell/script/bin/utgb-eclipse.conf
+++ b/utgb-shell/src/main/java/org/utgenome/shell/script/bin/utgb-eclipse.conf
@@ -1,6 +1,6 @@
 main is org.utgenome.shell.UTGBShell from utgb.core
 
-set utgb.home default ${utgb.home}/.utgb
+#set utgb.home default ${utgb.home}/.utgb
 
 [utgb.core]
 load ${utgb.home}/lib/*.jar
