--- a/utgb-shell/src/main/java/org/utgenome/shell/script/bin/utgb-eclipse.conf
+++ b/utgb-shell/src/main/java/org/utgenome/shell/script/bin/utgb-eclipse.conf
@@ -1,7 +1,8 @@
 main is org.utgenome.shell.UTGBShell from utgb.core
 
-#set utgb.home default ${utgb.home}/.utgb
+set utgb.home default ${user.home}/.utgb
 
 [utgb.core]
 load ${utgb.home}/lib/*.jar
+
 
