add property files which have program version information

--- a/utgb-shell/src/main/java/org/utgenome/shell/script/bin/utgb-eclipse.conf
+++ b/utgb-shell/src/main/java/org/utgenome/shell/script/bin/utgb-eclipse.conf
@@ -1,6 +1,6 @@
 main is org.utgenome.shell.UTGBShell from utgb.core
 
-set utgb.home default ${user.home}/.utgb
+set utgb.home default ${user.home}/local/utgb
 
 [utgb.core]
 load ${utgb.home}/lib/*.jar
