--- a/utgb-core/pom.xml
+++ b/utgb-core/pom.xml
@@ -24,6 +24,10 @@
       <resource>
         <directory>src/main/java</directory>
       </resource>
+      <resource>
+        <directory>src/main/resources</directory>
+        <filtering>true</filtering>
+      </resource>
     </resources>
     <testResources>
       <testResource>
