--- a/utgb-core/pom.xml
+++ b/utgb-core/pom.xml
@@ -247,7 +247,7 @@
     <dependency>
       <groupId>org.utgenome.thirdparty</groupId>
       <artifactId>gwt-incubator</artifactId>
-      <version>20100204-r1747</version>
+      <version>2.1.0</version>
     </dependency>
 
     <dependency>
