upgrade to GWT2.1.0

--- a/utgb-core/pom.xml
+++ b/utgb-core/pom.xml
@@ -247,7 +247,7 @@
     <dependency>
       <groupId>org.utgenome.thirdparty</groupId>
       <artifactId>gwt-incubator</artifactId>
-      <version>2.1.0</version>
+      <version>20101117-r1766</version>
     </dependency>
 
     <dependency>
