--- a/pom.xml
+++ b/pom.xml
@@ -245,6 +245,16 @@
 
 
     </plugins>
+
+	<!-- necessary for deploying artifacts via scp -->
+	<extensions>
+	  <extension>
+		<groupId>org.apache.maven.wagon</groupId> 
+		<artifactId>wagon-ssh-external</artifactId> 
+		<version>1.0-beta-7</version> 
+	  </extension> 
+	</extensions>
+
   </build>
 
   <dependencies>
@@ -391,6 +401,7 @@
       <url>scpexe://maven.utgenome.org/home/web/maven.utgeonme.org/repository/site/utgb</url>
     </site>
   </distributionManagement>
+
 
 
   <profiles>
