--- a/utgb-shell/pom.xml
+++ b/utgb-shell/pom.xml
@@ -19,6 +19,7 @@
   </properties>
 
   <build>
+
     <plugins>
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
@@ -33,10 +34,10 @@
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-surefire-plugin</artifactId>
-        <version>2.6</version>
+        <version>2.7.2</version>
         <configuration>
           <additionalClasspathElements>
-            <additionalClasspathElement>${project.build.outputDirectory}</additionalClasspathElement>
+            <additionalClasspathElement>${basedir}/src/main/resources</additionalClasspathElement>
           </additionalClasspathElements>
         </configuration>
       </plugin>
