fixed test-execution order dependent errors, which failed to find org.utgenome.shell.scaffold package.  I'm not sure why this error occurred, but I guess this is the problem of Maven's class loader

--- a/utgb-shell/pom.xml
+++ b/utgb-shell/pom.xml
@@ -37,8 +37,9 @@
         <version>2.7.2</version>
         <configuration>
           <additionalClasspathElements>
-            <additionalClasspathElement>${basedir}/src/main/resources</additionalClasspathElement>
+            <additionalClasspathElement>${basedir}/${project.build.outputDirectory}</additionalClasspathElement>
           </additionalClasspathElements>
+		  <forkMode>always</forkMode>
         </configuration>
       </plugin>
 
