automatically extract version information from pom.xml in building utgb-shell

--- a/utgb-shell/Makefile
+++ b/utgb-shell/Makefile
@@ -20,8 +20,12 @@ PROG:=utgb
 PREFIX:=${HOME}/local
 INSTALL_DIR:=$(PREFIX)/$(PROG)
 
-VERSION:=1.5.1-SNAPSHOT
+# Read the version number from the pom.xml. The last grep is for removing log messages
+VERSION:=$(shell $(MVN) help:evaluate -Dexpression="project.version" | grep -v "^\[")
 ARCHIVE = target/utgb-toolkit-$(VERSION)-bin.tar.gz
+
+version:
+	echo $(VERSION)
 
 SRC=$(shell find src)
 
