--- a/pom.xml
+++ b/pom.xml
@@ -221,7 +221,7 @@
       <!-- tag directory -->
       <plugin>
         <artifactId>maven-release-plugin</artifactId>
-		<version>2.0-beta-9</version>
+		<version>2.1</version>
         <configuration>
 		  <autoVersionSubmodules>true</autoVersionSubmodules>
 		  <preparationGoals>clean install</preparationGoals>
