--- a/utgb-shell/src/main/resources/org/utgenome/shell/template/java/scaffold/pom.xml.template
+++ b/utgb-shell/src/main/resources/org/utgenome/shell/template/java/scaffold/pom.xml.template
@@ -16,7 +16,7 @@
   <!-- set your GWT module name within the gwt.module tag (optional) -->  
   <properties>
     <utgb.version>$utgbVersion$</utgb.version>
-    <gwt.version>2.1.0</gwt.version>
+    <gwt.version>2.2.0</gwt.version>
     <gwt.module>$moduleName$</gwt.module>
     <gwt.module.path>$modulePath$</gwt.module.path>
     <sqlite-jdbc.version>3.7.2</sqlite-jdbc.version>
@@ -233,6 +233,15 @@
       </plugin>
 
     </plugins>
+
+	<!-- necessary for deploying artifacts via scp -->
+	<extensions>
+	  <extension>
+		<groupId>org.apache.maven.wagon</groupId> 
+		<artifactId>wagon-ssh-external</artifactId> 
+		<version>1.0-beta-7</version> 
+	  </extension> 
+	</extensions>
 
   </build>
 
