--- a/utgb-shell/Makefile
+++ b/utgb-shell/Makefile
@@ -20,7 +20,7 @@ PROG:=utgb
 PREFIX:=${HOME}/local
 INSTALL_DIR:=$(PREFIX)/$(PROG)
 
-# Read the version number from the pom.xml. The last grep is for removing log messages
+# Read the version number from the pom.xml by using lib/silk-weaver.jar 
 VERSION:=$(shell java -jar lib/silk-weaver.jar find "project(artifactId, version)" pom.xml | grep utgb-shell | cut -f 2)
 ARCHIVE = target/utgb-toolkit-$(VERSION)-bin.tar.gz
 
