--- a/utgb-core/pom.xml
+++ b/utgb-core/pom.xml
@@ -3,14 +3,14 @@
   <parent>
     <groupId>org.utgenome</groupId>
     <artifactId>utgb-toolkit</artifactId>
-    <version>1.5.3-SNAPSHOT</version>
+    <version>1.5.3</version>
   </parent>
 
   <modelVersion>4.0.0</modelVersion>
   <groupId>org.utgenome</groupId>
   <artifactId>utgb-core</artifactId>
   <name>UTGB Core</name>
-  <version>1.5.3-SNAPSHOT</version>
+  <version>1.5.3</version>
   <description>UTGB Core Components</description>
   <packaging>jar</packaging>
 
